--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
     <!-- Compressed CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/foundation-sites@6.6.3/dist/css/foundation.min.css"
         integrity="sha256-ogmFxjqiTMnZhxCqVmcqTvjfe1Y/ec4WaRj/aQPvn+I=" crossorigin="anonymous">
+    <div id="map-script-container"></div>
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>City Learner</title>
+    <title>City Explorer</title>
 </head>
 
 <body>
     <header class="hero">
-        <h1 class="title">City Learner</h1>
+        <h1 class="title">City Explorer</h1>
     </header>
 
     <main>
@@ -21,7 +22,7 @@
         <div class="grid-x grid-margin-x grid-margin-y container">
 
             <!--column 1: city input, food pull-down, event pull-down, saved itineraries-->
-            <div class="cell small-12 medium-4">
+            <div class="cell small-12 large-2">
 
                 <!--column 1 wrapper-->
                 <div class="column-1">
@@ -29,47 +30,42 @@
                     <!--search input area-->
                     <form id="search-form" class="search-form">
                         <p id="invalid-city" class="invalid-search hide">not a valid city</p>
-                        <label>Search by City:</label>
-                        <input id="city-input" class="city-input">
+                        <label>Search by City, State</br>(2 Letter Code):</label>
+                        <input id="city-input" class="city-input" placeholder="ex. Los Angeles, CA">
                         <button id="search-button" class="search-button">
                             <i class="fas fa-search"></i>
+                        </button>
+                        <button type="button" id="clear-cities">
+                            <i class="fas fa-trash"></i>
                         </button>
                     </form>
 
                     <!--food options pull-down-->
-                    <label>Type of Food // this shows the non-multi-select version
+                    <label>Type of Food
                         <!--would be awesome if we could dynamically create the options-->
-                        <select>
-                            <option value="american">American</option>
-                            <option value="italian">Italian</option>
-                            <option value="mexican">Mexican</option>
-                            <option value="etc">Etc</option>
+                        <select id="food-filter">
+                            <option value=" ">Surprise Me!</option>
+                            <option value="American">American</option>
+                            <option value="Italian">Italian</option>
+                            <option value="Asian">Asian</option>
+                            <option value="Vegetarian Friendly">Vegetarian</option>
+                            <option value="Vegan Options">Vegan</option>
                         </select>
                     </label>
 
                     <!--event options pull-down-->
-                    <label>Type of Event // this shows the multi-select version
+                    <label>Type of Event
                         <!--would be awesome if we could dynamically create the options-->
-                        <select multiple>
-                            <option value="outdoor">Outdoor</option>
-                            <option value="indoor">Indoor</option>
-                            <option value="crafts">Crafts</option>
-                            <option value="movies">Movies</option>
+                        <select id="event-filter">
+                            <option value=" ">Surprise Me!</option>
+                            <option value="Tours">Tours</option>
+                            <option value="Sights & Landmarks">Sights & Landmarks</option>
                         </select>
                     </label>
 
                     <!--saved itinerary area-->
                     <div class="save-area">
-                        <ul id="saved-itinerary" class="saved-itinerary">
-
-                            <!--hard code start-->
-                            <!--delete all hard coded code when functionality has been added.-->
-                            <!--class of "button" needs to be used on button element in Foundation buttons-->
-                            <button class="button expanded">Los Angeles</button>
-                            <button class="button expanded">Anaheim</button>
-                            <!--hard code end-->
-
-                        </ul>
+                        <ul id="search-history-buttons" class="saved-itinerary"></ul>
                     </div>
 
                 </div>
@@ -77,42 +73,22 @@
             </div>
 
             <!--column 2: itinerary area-->
-            <div id="column-two" class="cell small-12 medium-4"></div>
+            <div id="column-two" class="cell small-12 large-4"></div>
 
             <!--column 3: map area that shows the directions from place to place-->
-            <div class="cell small-12 medium-4">
+            <div id="map-container" class="cell small-12 large-6">
 
-                <!--column 3 wrapper-->
-                <!-- <div class="column-3">
-
-                    <div id="map-area" class="card map-area"> -->
-
-                <!--hard code start-->
-                <!--delete all hard coded code and text when functionality has been added.-->
-                <!--class of "card-divider" needs to be used to create a card header in Foundation styling-->
-                <!-- <div class="card-divider">
-                            This is the map area.  Need a title.
-                        </div> -->
-                <!--pseudo-code for adding an image-->
-                <!-- <img id="map-pic" src="assets/images/google_map_pic.png"> -->
                 <div id="map"></div>
-                <!--class of "card-section" needs to be applied to create a text section in the Foundation card-->
-                <!-- <div class="card-section">
-                            Do we want any text, such as the written directions, under the Google Map?
-                        </div> -->
-                <!--hard code end-->
-
-                <!-- </div> -->
-
-                <!-- </div> -->
 
             </div>
         </div>
     </main>
-
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://use.fontawesome.com/releases/v5.14.0/js/all.js" data-auto-replace-svg="nest"></script>
+    <!-- <div id="map-script-container"></div> -->
     <script src="./assets/js/script.js"></script>
+    <script
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCv_iF_YniNOH9mI6WvJc66w5bo3_PXXCg&callback=initMap"></script>
 </body>
 
 </html>
