--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <header class="hero">
-        <h1 class="title">City Explorer</h1>
+        <h1 class="title">CITY EXPLORER</h1>
     </header>
 
     <main>
@@ -28,15 +28,15 @@
 
                     <!--search input area-->
                     <form id="search-form" class="search-form">
-                        <p id="invalid-city" class="invalid-search hide">not a valid city</p>
-                        <label>Search by City, State</br>(2 Letter Code):</label>
+                        <p id="invalid-city" class="invalid-search hide">Not a Valid City</p>
+                        <label>Search by City, State</br>(2-Letter Code):</label>
                         <input id="city-input" class="city-input" placeholder="ex. Los Angeles, CA">
                         <button id="search-button" class="search-button">
                             <i class="fas fa-search"></i>
                         </button>
-                        <button type="button" id="clear-cities">
+                        <!-- <button type="button" id="clear-cities">
                             <i class="fas fa-trash"></i>
-                        </button>
+                        </button> -->
                     </form>
 
                     <!--food options pull-down-->
@@ -64,8 +64,10 @@
                     <div class="save-area">
                         <ul id="search-history-buttons" class="saved-itinerary"></ul>
                     </div>
-
-                </div>
+                    <button type="button" id="clear-cities">
+                        <i class="fas fa-trash test"></i>
+                    </button>
+            </div>
 
             </div>
 
