--- a/index.html
+++ b/index.html
@@ -29,20 +29,16 @@
 
                     <!--search input area-->
                     <form id="search-form" class="search-form">
-                        <p id="invalid-city" class="invalid-search hide">not a valid city</p>
                         <label>Search by City, State</br>(2 Letter Code):</label>
+                        <p id="invalid-city" class="invalid-search hide">Not a valid city or improper format</p>
                         <input id="city-input" class="city-input" placeholder="ex. Los Angeles, CA">
                         <button id="search-button" class="search-button">
                             <i class="fas fa-search"></i>
-                        </button>
-                        <button type="button" id="clear-cities">
-                            <i class="fas fa-trash"></i>
                         </button>
                     </form>
 
                     <!--food options pull-down-->
                     <label>Type of Food
-                        <!--would be awesome if we could dynamically create the options-->
                         <select id="food-filter">
                             <option value=" ">Surprise Me!</option>
                             <option value="American">American</option>
@@ -55,7 +51,6 @@
 
                     <!--event options pull-down-->
                     <label>Type of Event
-                        <!--would be awesome if we could dynamically create the options-->
                         <select id="event-filter">
                             <option value=" ">Surprise Me!</option>
                             <option value="Tours">Tours</option>
@@ -64,7 +59,13 @@
                     </label>
 
                     <!--saved itinerary area-->
-                    <div class="save-area">
+                    <div>
+                        <h3 id="history-title">
+                            Search History
+                            <button type="button" id="clear-cities"><i class='fas fa-trash'></i></button>
+                        </h3>
+                    </div>
+                    <div class="save-area" id="save-area">
                         <ul id="search-history-buttons" class="saved-itinerary"></ul>
                     </div>
 
@@ -76,7 +77,7 @@
             <div id="column-two" class="cell small-12 large-3"></div>
 
             <!--column 3: map area that shows the directions from place to place-->
-            <div id="map-container" class="cell small-12 large-6">
+            <div class="cell small-12 large-6">
 
                 <div id="map"></div>
 
